--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,4 +1,25 @@
 <!-- wxml页面写布局 -->
+<!-- 1，展示轮播图 -->
+<w-swiper list="{{banners}}"/>
+
+<!-- 2，推荐数据展示 -->
+<w-recommend list="{{recommends}}"/>
+
+<!-- 3，展示本周流行 -->
+<view>
+    <image class="img" src="/assets/home/popular_bg.jpg" mode="widthFix"></image>
+</view>
+
+<!-- 4，tabControl -->
+<tab-control titles="{{['流行', '新款', '精选']}}" bind:itemClick="handleTabClick"/>
+
+<!-- 5，展示商品数据 -->
+<view class="goods">
+    <block wx:for="{{goods[currentType].list}}" wx:key="key">
+        <w-goods-item class="item" item="{{item}}"/>
+    </block>
+</view>
+
 
 
 
