--- a/components/w-goods-item/w-goods-item.wxss
+++ b/components/w-goods-item/w-goods-item.wxss
@@ -12,10 +12,10 @@
 
 .desc-info {
   text-align: center;
-  position: absolute;
+  /* position: absolute;
   left: 0;
   right: 0;
-  bottom: 10rpx;
+  bottom: 10rpx; */
 
 }
 
@@ -37,11 +37,11 @@
 }
 
 .info .icon {
-  /* width: 30rpx;
+  width: 30rpx;
   height: 30rpx;
   padding: 0 6rpx 0 10rpx;
   position: relative;
-  top: 5rpx; */
+  top: 5rpx;
 }
 
 .cfav {
